CUI-106 Fixing wordwrap helper and adding clearing on page-description

--- a/forgerock-ui-commons/src/main/resources/css/common/helpers.less
+++ b/forgerock-ui-commons/src/main/resources/css/common/helpers.less
@@ -136,9 +136,15 @@ For font awesome
     }
 }
 
+
 .wordwrap{
     white-space: initial;
     word-wrap: break-word;
+    word-break: break-word;
+}
+
+// Required because ff does not wrap properly in tables.
+.table .wordwrap {
     word-break: break-all;
 }
 
