--- a/forgerock-ui-commons/src/main/resources/css/common/page-header.less
+++ b/forgerock-ui-commons/src/main/resources/css/common/page-header.less
@@ -78,4 +78,5 @@
 
 .page-description {
     margin: 0 0 20px 2px;
+    clear: left;
 }
